remove AggressiveOpts